--- a/src/entrypoints/styles.module.css
+++ b/src/entrypoints/styles.module.css
@@ -1,3 +1,15 @@
 .inspector {
   margin-top: var(--spacing-l);
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
+.helperContainer {
+  margin-top: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
